[package]
name = "advanca-crypto-types"
version = "0.1.0"
authors = ["Advanca Authors"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde                 = { version = "1.0", features = ["derive"] }
serde_json            = { version = "1.0" }
serde-big-array       = { version = "0.3.0" }
advanca-crypto-ctypes = { path = "../advanca-crypto-ctypes" }

# [target.'cfg(not(features = "enclave"))'.dependencies]
