[package]
name = "advanca-crypto"
version = "0.1.0"
authors = ["Chua Zheng Leong <czl@iiyume.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default          = []
sgx_enclave      = ["sgx_tcrypto", "sgx_tkey_exchange", "sgx_tstd", "advanca-crypto-types/sgx_enclave"]

ring_support     = ["ring", "std_env"]
aes_support      = ["rand", "aes", "cmac", "std_env"]
aas_support      = ["rand", "ring_support"]
std_env          = ["ring_support", "aes_support", "aas_support", "sgx_ucrypto", "advanca-crypto-types/std_env"]

[dependencies]
advanca-crypto-ctypes = { path = "../advanca-crypto-ctypes" }
sgx_types             = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tkey_exchange     = { rev = "v1.1.2", optional = true, git = "https://github.com/apache/teaclave-sgx-sdk.git" }
ring                  = { optional = true, version = "0.16.13" }
advanca-crypto-types  = { optional = true, path = "../advanca-crypto-types" }
cmac                  = { optional = true, version = "0.2.0" }
aes                   = { optional = true, version = "0.3.2" }
rand                  = { optional = true, version = "0.7.3" }
sgx_tstd              = { rev = "v1.1.2", optional = true, git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_ucrypto           = { rev = "v1.1.2", optional = true, git = "https://github.com/apache/teaclave-sgx-sdk.git"}
sgx_tcrypto           = { rev = "v1.1.2", optional = true, git = "https://github.com/apache/teaclave-sgx-sdk.git"}
