[package]
name = "advanca-macros"
version = "0.4.1"
authors = ["Advanca Authors"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default     = []
sgx_enclave = ["advanca-crypto-types/sgx_enclave"]
std_env     = ["advanca-crypto-types/std_env"]


[dependencies]
sgx_types             = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
advanca-crypto-types  = { path = "../advanca-crypto-types", optional = true}
