[package]
name = "advanca-macros"
version = "0.5.0"
authors = ["Advanca Authors"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default     = []
sgx_enclave = ["advanca-types/sgx_enclave"]
std_env     = ["advanca-types/std_env"]


[dependencies]
sgx_types             = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
advanca-types  = { path = "../advanca-types", optional = true}
