[package]
name = "advanca-proc-macros"
version = "0.1.0"
authors = ["Chua Zheng Leong <czl@iiyume.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.29", features = ["full", "extra-traits"]}
quote = "1.0.6"
